[project]
name = "VaultScan"
dynamic = ["version"]
description = "Searching objects across vaults"
authors = [
    {name = "gabrielrih@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "azure-identity (>=1.20.0,<2.0.0)",
    "azure-keyvault-secrets (>=4.9.0,<5.0.0)",
    "pykeepass (>=4.1.0.post1,<5.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "diskcache (>=5.6.3,<6.0.0)"
]
packages = [{ include = "vaultscan" }]

[tool.poetry]
version = "1.0.0-dev"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
vaultscan = "vaultscan.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
coverage = "^7.6.12"
pytest-console-scripts = "^1.4.1"

[tool.semantic_release]
version_variables = [
    "vaultscan/__init__.py:__version__"
]
# The NEW_VERSION variable is automatically injected by semantic_release: https://python-semantic-release.readthedocs.io/en/latest/configuration.html#build-command
build_command = "poetry version $NEW_VERSION && poetry build && ls -ls ./dist/"

[tool.semantic_release.branches.release]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.prerelease]
match = ".*"
prerelease_token = "rc"
prerelease = true
